--- a/web/public/index.html
+++ b/web/public/index.html
@@ -14,7 +14,10 @@
     <title>Grocery Cookbook</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <h1>Grocery Cookbook</h1>
+      <h3>You need to enable JavaScript to run this app.</h3>
+    </noscript>
     <div id="root"></div>
   </body>
 </html>
